@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.11 2003/09/04 13:49:41 minoura Exp $
+# $NetBSD: Makefile,v 1.12 2004/09/10 17:10:24 uebayasi Exp $
 
-DISTNAME=	semi-1.14.5
-PKGREVISION=	2
+DISTNAME=	semi-1.14.6
 CATEGORIES=	devel
 MASTER_SITES=	ftp://ftp.m17n.org/pub/mule/semi/semi-1.14-for-flim-1.14/
 
@@ -9,9 +8,9 @@ MAINTAINER=	tech-pkg-ja@jp.NetBSD.org
 HOMEPAGE=	http://www.m17n.org/SEMI/
 COMMENT=	Emacs lisp library to provide MIME feature
 
-DEPENDS+=	apel>=10.3:../../devel/apel
-DEPENDS+=	flim>=1.6:../../devel/flim
-BUILD_DEPENDS+=	${PKGNAME_PREFIX}w3-*:../../www/w3
+DEPENDS+=	${PKGNAME_PREFIX}apel>=10.3:../../devel/apel
+DEPENDS+=	${PKGNAME_PREFIX}flim>=1.6:../../devel/flim
+#BUILD_DEPENDS+=	${PKGNAME_PREFIX}w3-*:../../www/w3
 BUILD_DEPENDS+=	${PKGNAME_PREFIX}bbdb-*:../../misc/bbdb
 BUILD_DEPENDS+=	qkc-*:../../converters/qkc
 
