@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.6 2003/04/13 03:55:52 uebayasi Exp $
+$NetBSD: distinfo,v 1.7 2004/09/10 17:10:24 uebayasi Exp $
 
-SHA1 (semi-1.14.5.tar.gz) = 2bc18d006f87ad2279a77d99ef50149f13076a96
-Size (semi-1.14.5.tar.gz) = 137993 bytes
+SHA1 (semi-1.14.6.tar.gz) = a7ed1b391abf837d3483243456936f51910f9894
+Size (semi-1.14.6.tar.gz) = 142549 bytes
 SHA1 (patch-ab) = 3d22b94d7609ff9bdbae20f583185a4b330b34b9
 SHA1 (patch-ac) = c5e7595bafbdc8c85b34d953626d9c4917aad1d6
